<?xml version="1.0" encoding="utf-8"?><!--
    Copyright (C) 2015 Nico Alt, nicoalt@posteo.org

    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
    as published by the Free Software Foundation; either version 3
    of the License, or (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program; if not, write to the Free Software
    Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/layout_horizontal_margin"
    android:paddingLeft="@dimen/layout_horizontal_margin"
    android:paddingTop="4dp"
    android:paddingEnd="@dimen/layout_horizontal_margin"
    android:paddingRight="@dimen/layout_horizontal_margin"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/summary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textStyle="bold"
        tools:text="Application manager" />

    <TextView
        android:id="@+id/package_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textSize="12sp"
        android:textStyle="italic"
        tools:text="org.fdroid.fdroid" />

    <TextView
        android:id="@+id/signature"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/antifeatures"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6sp"
        android:textColor="#ff0000"
        android:textStyle="bold"
        tools:text="Feeds you too much chocolate" />

    <LinearLayout
        android:id="@+id/ll_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/whats_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="?attr/detailPanel"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:textSize="13sp"
            tools:text="NEW IN VERSION 1.0.2233\n\nA lot has happened since he last build:\n\n\t• Improved UI\n\t• Bug fixes" />

        <TextView
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:autoLink="web|email"
            android:scrollbars="none"
            android:singleLine="false"
            android:textIsSelectable="true"
            android:textSize="13sp"
            tools:text="Connects to F-Droid compatible repositories. The default repo is hosted at f-droid.org, which contains only bona fide FOSS.
\n\n
Android is open in the sense that you are free to install apks from anywhere you wish, but there are many good reasons for using a client/repository setup:
\n\n
    * Be notified when updates are available\n
    * Keep track of older and beta versions\n
    * Filter apps that aren't compatible with the device\n
    * Find apps via categories and searchable descriptions\n
    * Access associated urls for donations, source code etc.\n
    * Stay safe by checking repo index signatures and apk hashes\n" />

        <TextView
            android:id="@+id/view_more_description"
            style="@style/DetailsMoreButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:text="@string/more" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/screnshot_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="5"
        tools:listitem="@layout/screenshot_item" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        tools:ignore="PxUsage" />

    <LinearLayout
        android:id="@+id/ll_information"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/information"
            style="@style/AppDetailsSubheaderText"
            android:text="@string/links"
            app:drawableEndCompat="@drawable/ic_expand_more_grey600"
            app:drawableStartCompat="@drawable/ic_website" />

        <LinearLayout
            android:id="@+id/ll_information_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_horizontal_margin"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/source"
                style="@style/AppDetailsLink"
                android:text="@string/menu_source"
                app:drawableStartCompat="@drawable/ic_source_code" />

            <TextView
                android:id="@+id/issues"
                style="@style/AppDetailsLink"
                android:text="@string/menu_issues"
                app:drawableStartCompat="@drawable/ic_issues" />

            <TextView
                android:id="@+id/changelog"
                style="@style/AppDetailsLink"
                android:text="@string/menu_changelog"
                app:drawableStartCompat="@drawable/ic_changelog" />

            <TextView
                android:id="@+id/website"
                style="@style/AppDetailsLink"
                android:text="@string/menu_website"
                app:drawableStartCompat="@drawable/ic_website" />

            <TextView
                android:id="@+id/email"
                style="@style/AppDetailsLink"
                android:text="@string/menu_email"
                app:drawableStartCompat="@drawable/ic_email" />

            <TextView
                android:id="@+id/donate"
                style="@style/AppDetailsLink"
                android:text="@string/menu_donate"
                app:drawableStartCompat="@drawable/ic_donate" />

            <TextView
                android:id="@+id/bitcoin"
                style="@style/AppDetailsLink"
                android:text="@string/menu_bitcoin"
                app:drawableStartCompat="@drawable/ic_bitcoin" />

            <TextView
                android:id="@+id/litecoin"
                style="@style/AppDetailsLink"
                android:text="@string/menu_litecoin"
                app:drawableStartCompat="@drawable/ic_litecoin" />

            <TextView
                android:id="@+id/flattr"
                style="@style/AppDetailsLink"
                android:text="@string/menu_flattr"
                app:drawableStartCompat="@drawable/ic_flattr" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_permissions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/permissions"
            style="@style/AppDetailsSubheaderText"
            android:text="@string/permissions"
            app:drawableEndCompat="@drawable/ic_expand_more_grey600"
            app:drawableStartCompat="@drawable/ic_lock_24dp_grey600" />

        <LinearLayout
            android:id="@+id/permission_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:orientation="vertical"
            android:paddingEnd="4dp"
            android:textSize="14sp"
            android:visibility="gone"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</LinearLayout>
